--- a/cloudnotes/src/main/resources/static/index.html
+++ b/cloudnotes/src/main/resources/static/index.html
@@ -3,10 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome to CloudNotes</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            color: #333;
+        }
+
+        .container {
+            background-color: #ffffffcc;
+            padding: 40px 60px;
+            border-radius: 20px;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            max-width: 600px;
+            animation: fadeIn 1.5s ease-in-out;
+        }
+
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+            color: #005792;
+        }
+
+        p {
+            font-size: 1.2em;
+            color: #444;
+            margin-bottom: 30px;
+        }
+
+        .btn {
+            background-color: #005792;
+            color: white;
+            padding: 12px 25px;
+            font-size: 1em;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            text-decoration: none;
+            animation: bounce 2s infinite;
+        }
+
+        .btn:hover {
+            background-color: #003f6b;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes bounce {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-8px);
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to CloudNotes</h1>
-    <p>Your cloud-based note-taking app is up and running!</p>
+    <div class="container">
+        <h1>Welcome to CloudNotes</h1>
+        <p>Your cloud-based note-taking app is up and running!</p>
+        <a href="#" class="btn">Get Started</a>
+    </div>
 </body>
 </html>
-
